--- a/Throttle Manila - Contact Us.html
+++ b/Throttle Manila - Contact Us.html
@@ -21,7 +21,7 @@
         width: 100%;
         height: 100%;
         z-index: -1;
-        background: url('Contact Us.gif') no-repeat center center fixed;
+        background: url('Contact us.gif') no-repeat center center fixed;
         background-size: cover;
     }
 
