--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         header {
             background-color: #F6F0F2;
             color: rgb(19, 15, 15);
-            padding: 0, 0;
+            padding: 0 0;
             text-align: center;
             position: relative;
             z-index: 1000;
@@ -197,7 +197,7 @@
     <header class="header">
         <div class="VROOM">
             <a href="index.html">
-                <img src="Throttle Manila Logo.png" alt="Throttle Manila Logo">
+                <img src="Throttle-Manila-Logo.png" alt="Throttle Manila Logo">
             </a>
         </div>
         <nav>
@@ -218,7 +218,7 @@
     </header>
 
     <div class="banner">
-        <img src="Home Page Banner Vroom.gif">
+        <img src="Home-Page-Banner-Vroom.gif">
     </div> 
         <h1> BACK ON TRACK</h1>
         <h2> MCLAREN720S</h2>
