--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <li><a href="Throttle Manila - Our Works.html">Our Works</a></li>
                 <li><a href="Throttle Manila - Contact Us.html">Contact Us</a></li>
                 <li><a href="Throttle Manila - Registration.html">Registration</a></li>
-                <div class="cart-logo openShopping">
+                <div class="cart-logo">
                     <a href = "ourworks.html">
                       <img src="Cart Logo.png" alt="Cart Logo">
                     </a>
@@ -223,7 +223,7 @@
         <h1> BACK ON TRACK</h1>
         <h2> MCLAREN720S</h2>
     <div class="Mclaren">
-        <img src="Home Page Banner Car.png">
+        <img src="Home-Page-Banner-Car.png">
         <a href="Throttle Manila - Our Works.html" class="gradient-btn">Check Out</a>
     </div>
    
