--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <li><a href="Throttle Manila - Our Works.html">Our Works</a></li>
                 <li><a href="Throttle Manila - Contact Us.html">Contact Us</a></li>
                 <li><a href="Throttle Manila - Registration.html">Registration</a></li>
-                <div class="cart-logo">
+                <div class="cart-logo openShopping">
                     <a href = "ourworks.html">
                       <img src="Cart Logo.png" alt="Cart Logo">
                     </a>
