--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
     </header>
 
     <div class="banner">
-        <img src="Home-Page-Banner-Vroom.gif">
+        <img src="Home Page Banner Vroom.gif">
     </div> 
         <h1> BACK ON TRACK</h1>
         <h2> MCLAREN720S</h2>
     <div class="Mclaren">
-        <img src="Home-Page-Banner-Car.png">
+        <img src="Home Page Banner Car.png">
         <a href="Throttle Manila - Our Works.html" class="gradient-btn">Check Out</a>
     </div>
    
