--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <header class="header">
         <div class="VROOM">
             <a href="index.html">
-                <img src="Throttle-Manila-Logo.png" alt="Throttle Manila Logo">
+                <img src="Throttle Manila Logo.png" alt="Throttle Manila Logo">
             </a>
         </div>
         <nav>
